<resources>
    <string name="app_name">Travel.Log</string>

    <!--  contentDescription  -->
    <string name="splash_marker">app_logo marker</string>
    <string name="id">id</string>
    <string name="name">name</string>
    <string name="n_email">이 앱은 회원가입을 해야 정상적으로 사용할 수 있습니다.\n Email로 등록해 주세요.</string>
    <string name="logi">회원이시면 여기에서 로그인 해주세요.</string>
    <string name="age">age</string>

    <string name="login">로그인</string>
    <string name="register">회원가입</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="password_check">비밀번호 확인</string>


    <!--  TabBarList  -->
    <string name="timeline">타임라인</string>
    <string name="map">지도</string>
    <string name="money_management">돈 관리</string>
    <string name="gap">gap</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="input_money">금액 입력</string>
    <string name="have_no_account">계정이 없다면? 회원가입하기</string>
    <string name="have_account">이미 계정이 있다면? 로그인하기</string>

    <string name="lorem_text">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum arcu leo, accumsan sed hendrerit eu, condimentum in lectus. Praesent egestas accumsan metus, ac elementum magna dictum sed. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nam vel mattis eros. In ultrices efficitur ligula, id tempus neque vestibulum quis. Fringilla euismod justo at semper.
    </string>

</resources>