<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity"
    android:padding="10dp"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:orientation="vertical">

        <EditText
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:drawablePadding="10dp"
            android:drawableTint="@color/dark_green"
            android:autofillHints="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:backgroundTint="@color/dark_green"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:id="@+id/input_email" />
        <EditText
            android:drawableStart="@drawable/ic_baseline_vpn_key_24"
            android:drawablePadding="10dp"
            android:drawableTint="@color/dark_green"
            android:autofillHints="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:backgroundTint="@color/dark_green"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:id="@+id/input_password" />

    </LinearLayout>

    <ImageView
        android:contentDescription="@string/gap"
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/dark_green"
            android:id="@+id/btn_login"
            android:textSize="18sp"
            android:text="@string/login"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:textSize="12sp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/have_no_account"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:layout_marginBottom="8dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_to_register"
            android:textColor="@color/dark_green"
            android:backgroundTint="@color/more_light_green"
            android:textSize="18sp"
            android:text="@string/register" />

    </LinearLayout>

</LinearLayout>